// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render children 1`] = `
<styled.div>
  <Subheading>
    Title
  </Subheading>
  child
</styled.div>
`;

exports[`render correct 1`] = `
<styled.div>
  <Subheading>
    Title
  </Subheading>
</styled.div>
`;

exports[`render with caption 1`] = `
<styled.div>
  <Subheading>
    Title
  </Subheading>
  <Caption>
    Caption
  </Caption>
</styled.div>
`;
